Think initial-scale could be causing horizontal scroll. Made size adj. Found max width on answer-background causing an issue.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 
 Used wikipedia for magic eight ball reference: https://en.wikipedia.org/wiki/Magic_8-Ball */
 
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0 auto;
+  overflow: hidden;
+  overflow-y: auto;
+}
 body {
   position: relative;
   background: #000;
@@ -9,22 +18,14 @@ body {
   font-size: 10px;
   line-height: normal;
 }
-html,
-body {
-  /* width: 100vw; */
-  /* to test to see what is causing the horizontal scroll */
-  width: 90vw;
-  height: 100vh;
-  margin: 0 auto;
-  overflow: hidden;
-  overflow-y: auto;
-}
 pre {
   white-space: pre-wrap;
 }
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
-  /* to test to see what is causing the horizontal scroll */
+  /* outline to test to see what is causing the horizontal scroll */
   outline: 1px solid yellow;
 }
 #magic-eight-ball {
@@ -48,7 +49,7 @@ pre {
     16px + (35 - 16) * ((100vw - 300px) / (1400 - 300))
   ); /* Resource: https://css-tricks.com/snippets/css/fluid-typography/ */
   color: #fff;
-  margin-top: 8vh;
+  margin-top: 3vh;
 }
 .ask-a-question {
   position: relative;
@@ -64,7 +65,7 @@ pre {
   /* width: 15vw; */
   width: calc(100px + (210 - 100) * ((100vw - 300px) / (1400 - 300)));
   height: auto;
-  margin: calc(10px + (20 - 10) * ((100vw - 300px) / (1400 - 300)));
+  margin: calc(5px + (10 - 5) * ((100vw - 300px) / (1400 - 300)));
 }
 form {
   position: relative;
@@ -118,8 +119,8 @@ button:focus {
 #answer-background {
   display: flex;
   justify-content: center;
-  /* width: calc(300px + (350 - 300) * ((100vw - 300px) / (1400 - 300))); */
-  max-width: 100vw;
+  width: calc(300px + (350 - 300) * ((100vw - 300px) / (1400 - 300)));
+  /* max-width: 30vw; */
   height: calc(300px + (350 - 300) * ((100vw - 300px) / (1400 - 300)));
   background-image: radial-gradient(#00f 0%, transparent 81%);
   margin: 0 auto;
